src/snapshots/ampterm__app__Snap 1.snap
---
source: src/app.rs
expression: self.tui.backend()
---
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                        ┌URL───────────────────────────────────────────────────────────────────────────┐                                        "
"                                        │https://                                                                      │                                        "
"                                        └──────────────────────────────────────────────────────────────────────────────┘                                        "
"                                        ┌Username──────────────────────────────────────────────────────────────────────┐                                        "
"                                        │                                                                              │                                        "
"                                        └──────────────────────────────────────────────────────────────────────────────┘                                        "
"                                        ┌Password──────────────────────────────────────────────────────────────────────┐                                        "
"                                        │                                                                              │                                        "
"                                        └──────────────────────────────────────────────────────────────────────────────┘                                        "
"                                        Use legacy auth instead                                                      [ ]                                        "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                          Enter: Submit                                                                         "
"                                                                     Space: Toggle checkbox                                                                     "
"                                                                   Tab or arrow keys: Navigate                                                                  "
"                                                             No credentials detected in the config.                                                             "
"                                                        (Loaded config from "/home/main/.config/ampterm")                                                       "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
