src/snapshots/ampterm__app__Test 1b.snap
---
source: src/app.rs
expression: self.tui.backend()
---
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                        ┌URL───────────────────────────────────────────────────────────────────────────┐                                        "
"                                        │https://music.local                                                           │                                        "
"                                        └──────────────────────────────────────────────────────────────────────────────┘                                        "
"                                        ┌Username──────────────────────────────────────────────────────────────────────┐                                        "
"                                        │                                                                              │                                        "
"                                        └──────────────────────────────────────────────────────────────────────────────┘                                        "
"                                        ┌Password──────────────────────────────────────────────────────────────────────┐                                        "
"                                        │                                                                              │                                        "
"                                        └──────────────────────────────────────────────────────────────────────────────┘                                        "
"                                        Use legacy auth instead                                                      [ ]                                        "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                          Enter: Submit                                                                         "
"                                                                     Space: Toggle checkbox                                                                     "
"                                                                   Tab or arrow keys: Navigate                                                                  "
"                                                             No credentials detected in the config.                                                             "
"                                                        (Loaded config from "/home/main/.config/ampterm")                                                       "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
