src/snapshots/ampterm__app__Test 1e.snap
---
source: src/app.rs
expression: self.tui.backend()
---
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                        ┌URL───────────────────────────────────────────────────────────────────────────┐                                        "
"                                        │https://music.local                                                           │                                        "
"                                        └──────────────────────────────────────────────────────────────────────────────┘                                        "
"                                        ┌Username──────────────────────────────────────────────────────────────────────┐                                        "
"                                        │ampache                                                                       │                                        "
"                                        └──────────────────────────────────────────────────────────────────────────────┘                                        "
"                                        ┌Password──────────────────────────────────────────────────────────────────────┐                                        "
"                                        │*******                                                                       │                                        "
"                                        └──────────────────────────────────────────────────────────────────────────────┘                                        "
"                                        Use legacy auth instead                                                      [X]                                        "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                          Enter: Submit                                                                         "
"                                                                     Space: Toggle checkbox                                                                     "
"                                                                   Tab or arrow keys: Navigate                                                                  "
"                                                             No credentials detected in the config.                                                             "
"                                                        (Loaded config from "/home/main/.config/ampterm")                                                       "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
